# LlamaCore.rs

./: Cargo.toml  README.md
src/: config.rs  error.rs  lib.rs  main.rs  model.rs  operations.rs  sampler.rs  tokenizer.rs  transformer.rs
